2004-10-26  Derek Price  <derek@ximbiot.com>

	* bison.m4 (gl_BISON): Update comment to eliminate new spaces from
	generated configure script.

2004-10-26  Derek Price  <derek@ximbiot.com>

	* bison.m4 (gl_BISON): Update comment to specify an Automake version
	number, rather than Autoconf.

2004-10-26  Derek Price  <derek@ximbiot.com>

	* bison.m4 (gl_BISON): Comment reasons for forking form GNULIB.

2004-10-25  Derek Price  <derek@ximbiot.com>

	* rpmatch.m4, yesno.m4: New files from GNULIB.

2004-10-22  Derek Price  <derek@ximbiot.com>

	* md5.m4, uint32_t.m4: New files from GNULIB.

2004-10-21  Derek Price  <derek@ximbiot.com>

	* rpmatch.m4, yesno.m4: Back out addition.

2004-10-21  Derek Price  <derek@ximbiot.com>

	* rpmatch.m4, yesno.m4: New files from GNULIB.

2004-10-21  Derek Price  <derek@ximbiot.com>

	* getpagesize.m4: New file from GNULIB.

2004-10-21  Derek Price  <derek@ximbiot.com>

	* realloc.m4: Remove this file.

2004-10-21  Derek Price  <derek@ximbiot.com>

	* malloc.m4: Remove this file.

2004-10-20  Mark D. Baushke  <mdb@cvshome.org>

	* sunos57-select.m4: New file. Work around Solaris 7 select()
	hang.

2004-10-18  Derek Price  <derek@ximbiot.com>

	* getopt.m4: Update file from GNULIB.

2004-10-15  Derek Price  <derek@ximbiot.com>

	* vasprintf.m4: New file from GNULIB.

2004-10-09  Derek Price  <derek@ximbiot.com>

	* lstat.m4: Update from GNULIB.

2004-10-09  Derek Price  <derek@ximbiot.com>

	* stat.m4: Update from GNULIB.

2004-10-07  Derek Price  <derek@ximbiot.com>

	* .cvsignore, Makefile.am, Makefile.in: Remove.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* getpass.m4: Update from GNULIB.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* strcase.m4: New file from GNULIB.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* ssize_t.m4: Update from GNULIB.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* stdbool.m4: Update from GNULIB.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* getopt.m4: Update from GNULIB.
