@@ -7,8 +7,8 @@
 #
 # Generated by gnulib-tool.
 #
-# Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd dirname exit exitfail extensions fnmatch-posix fnmatch mkstemp getopt stdbool getline getnline getndelim2 gethostname strcase getpass-gnu gettimeofday timespec gettime unlocked-io tzset restrict time_r mktime minmax memmove nanosleep stat lstat strerror vasprintf malloc realloc strftime xsize getpagesize md5 stdint yesno
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4   alloca alloca-opt atexit dirname exit exitfail extensions fnmatch fnmatch-posix gethostname getline getndelim2 getnline getopt getpagesize getpass-gnu gettext gettime gettimeofday lstat malloc md5 memmove minmax mkstemp mktime nanosleep pathmax realloc regex restrict rpmatch save-cwd stat stdbool stdint strcase strerror strftime time_r timespec tzset unlocked-io vasnprintf vasprintf xalloc xgetcwd xsize yesno
+# Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd dirname exit exitfail extensions fnmatch-posix fnmatch mkstemp getopt stdbool getline getnline getndelim2 gethostname strcase getpass-gnu gettimeofday timespec gettime unlocked-io tzset restrict time_r mktime minmax memmove nanosleep stat lstat strerror vasprintf malloc realloc strftime xsize getpagesize md5 stdint yesno allocsa setenv getdate
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4   alloca alloca-opt allocsa atexit dirname exit exitfail extensions fnmatch fnmatch-posix getdate gethostname getline getndelim2 getnline getopt getpagesize getpass-gnu gettext gettime gettimeofday lstat malloc md5 memmove minmax mkstemp mktime nanosleep pathmax realloc regex restrict rpmatch save-cwd setenv stat stdbool stdint strcase strerror strftime time_r timespec tzset unlocked-io vasnprintf vasprintf xalloc xgetcwd xsize yesno
 
 AC_DEFUN([gl_EARLY],
 [
@@ -20,12 +20,14 @@ AC_DEFUN([gl_INIT],
 [
   gl_FUNC_ALLOCA
   gl_FUNC_ALLOCA
+  gl_ALLOCSA
   gl_FUNC_ATEXIT
   gl_DIRNAME
   gl_EXITFAIL
   dnl gl_USE_SYSTEM_EXTENSIONS must be added quite early to configure.ac.
   # No macro. You should also use one of fnmatch-posix or fnmatch-gnu.
   gl_FUNC_FNMATCH_POSIX
+  gl_GETDATE
   gl_FUNC_GETHOSTNAME
   AM_FUNC_GETLINE
   gl_GETNDELIM2
@@ -49,6 +51,7 @@ AC_DEFUN([gl_INIT],
   gl_C_RESTRICT
   gl_FUNC_RPMATCH
   gl_SAVE_CWD
+  gt_FUNC_SETENV
   gl_FUNC_STAT
   AM_STDBOOL_H
   gl_STDINT_H
